Completed the user profiles implementation
